Fixed alignment index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 .Topbar{
-    position: relative;
+    position: relative;    
     background-color: #ffffff;
     width: 100%;
     height: 100px;
@@ -11,20 +11,20 @@
     border-color: #cccccc;
     /* margin-top: 10px;
     margin-bottom: 10px; */
+    text-align: center;
     
 }
 .TopbarContent{
-    position: absolute;
-    width: 960px;
+    position: relative; 
+    max-width: 960px; 
     height: 100%;    
-    margin-left: 20%;
-    margin-right: 20%;
+    margin: auto;
 }
 .Logo{
     position: absolute;
     background-color: #4aaaa5;
     float: left;
-    width: 30%;
+    width: 33.3%;
     /* height: 10%; */
     padding-top: 3.5%;
     padding-bottom: 3.5%;
@@ -32,22 +32,22 @@
     text-align: center;
 
 }
+
 .Navbar{
     position: absolute;
     float: left;
-    width: 30%;
+    width: 33.3%;
     height: 100%;
     padding-top:4%;
     padding-bottom: 5%;
-    margin-left: 700px;
+    left: 70%;
     Color: #777777;
     
 }
 .Content{
     position: relative;
-    width: 960px;
-    margin-left: 20%;
-    margin-right: 20%;
+    max-width: 960px;
+    margin: 0 auto;
     margin-top: 40px;
     margin-bottom: 40px;
     border-style: outset;
